un nuevo parrafo

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <h2>Giulia gt</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa neque sequi omnis nisi eos ea! Quia earum
                 ab quo pariatur.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, quas!</p>
 
 
         </section>
